# nm4p

./: .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile.toml  README.md  a.ds  image.ppm  justfile  links.md  nu-utils.nu  report.typ  requirements.txt  tasks.nu  tmp.txt
book/: book.toml
book/src/: SUMMARY.md
book/src/logbook/: 2023_07_03.md  README.md
common/: Cargo.toml
common-typst/: defs.typ
common-typst/common/: boxes.typ  common_styles.typ  ieee.typ  project.typ
common/examples/: a.rs  b.rs  data_stream.rs  variance.rs
common/src/: cli.rs  data_stream.rs  interpolation.rs  lib.rs  stat.rs
course_modules/: CMakeLists.txt
course_modules/mod_01/: CMakeLists.txt
course_modules/mod_01/ising_01/: CMakeLists.txt  NeighborsIterator.hpp  Potts2dItem.cpp  Potts2dItem.hpp  PottsNd.cpp  PottsNd.hpp  a.cu  a.ocl  ising2d.md  main.cpp  main_demo.cpp  opencl_utils.cpp  opencl_utils.hpp  steppers.cpp  steppers.hpp  tmp.cpp
course_modules/mod_01/metropolis_gauss/: CMakeLists.txt  main.cpp
course_modules/mod_01/metropolis_lib/: CMakeLists.txt
course_modules/mod_01/metropolis_lib/include/nm4pLib/: metropolis.hpp
course_modules/mod_01/metropolis_lib/src/: metropolis.cpp
course_modules/mod_02/: CMakeLists.txt  tmp.cpp
course_modules/mod_03/: CMakeLists.txt  README.md  Trajectory.cpp  Trajectory.hpp  main.cpp  metropolis.cpp  metropolis.hpp
course_modules/mod_03/actions/: AbstractMultiParticleAction.cpp  AbstractMultiParticleAction.hpp  HO_1P_Action.cpp  HO_1P_Action.hpp  MultiParticleAction.cpp  MultiParticleAction.hpp
crates/common/: Cargo.toml
crates/common/src/: data_stream.rs
crates/mod_0/: Cargo.toml
crates/mod_0/src/ran/: ran0.rs
crates/mod_1/: justfile
dark/: Cargo.toml
dark/src/: main.rs
gpgpu/: Cargo.toml  README.md
gpgpu/examples/: add.rs  add.wgsl  mandelbrot.rs  mandelbrot.wgsl  mini_rand.wgsl
gpgpu/src/: buffer.rs  device.rs  lib.rs  storage.rs  uniform.rs
gpgpu/src/wgsl-lib/: mini_ran.wgsl
mod_0/: Cargo.toml  README.md  mod_0.nu
mod_0/examples/: congruent-generator.rs  congruent_generator.rs  congruent_random_number_generator.rs  ran.rs
mod_0/fortran_src/: README.md  congruent_random_number_generator.f
mod_0/src/: congruent_generator.rs  congruent_random_number_generator.rs  lib.rs  main.rs_OLD  ran.rs
mod_0/src/ran/: ran0.rs  ran1.rs  ran2.rs
mod_1/: Cargo.toml  bibliography.yaml  dubbio.typ  mod_1.nu  report.typ  xtask.yaml
mod_1/appendixes/: 1_delta_trend.typ  ADMC.typ  ad.typ  autocorr_fft.typ  cubic-interpolation.typ  cubic_interpolation.ipynb  iat.typ  reweighting.typ  tau_int-vs-tau_exp.typ  tmp.typ
mod_1/examples/: autocorr-fft.rs  autocorr-int-finder-comparison.rs  autocorr-int-finder.rs  autocorr-int.rs  autocorr-plain.rs  binning.rs  metropolis-gauss-acc-plot.rs  metropolis-gauss-tau-vs-acc.rs  metropolis-gauss.rs  reweighting-failure.rs  test-tau-int-estimate.rs
mod_1/img/plots/: .gitignore  README.md
mod_1/src/: lib.rs  metropolis_1d.rs
mod_3/: Cargo.toml
mod_3/examples/: aaa.rs  ho.rs  ho_plain.rs  ho_plain_tmp.rs
mod_3/src/: lib.rs
nm4pLib/: CMakeLists.txt
nm4pLib/include/nm4pLib/: HistoData.hpp
nm4pLib/include/nm4pLib/utils/: arrays.hpp  itrange.hpp  math.hpp  ranges.hpp  stat.hpp  strings.hpp
nm4pLib/src/: stat.cpp
prova_elimina/: Cargo.toml
prova_elimina/src/: a.cl  main.rs
report/: common.typ  justfile  main.typ  styles.typ
report/custom-typst/: README.md  better-highlight.typ  boxes.typ
report/mod_1/: mod.typ
report/mod_1/figs/: justfile
report/mod_1/figs/metrogauss/: plot-all.nu  plot.py
utils/: Cargo.toml
utils/src/: lib.rs  main.rs  stat.rs
xtask/: Cargo.toml
xtask/src/: main.rs
zzz/: Makefile.toml
