[workspace]
resolver = "2"
members = [
    "common",
    "mod_0",
    "mod_1",
    "mod_3",
    #"prova_elimina",
    #"dark",
]
default-members = [
    "common",
    "mod_0",
    "mod_1",
    "mod_3",
]


[patch.crates-io]
#num-traits = { git = "https://github.com/LucaCiucci/num-traits" }
#num-traits = { path = "C:/Users/lucac/Documents/GitHub/num-traits" }

[workspace.dependencies]
base64 = "0.21.7"
bincode = "1.3.3"
clap = { version = "4.5.1", features = ["derive"] }
differential = { git = "https://github.com/LucaCiucci/differential-rs", version = "0.1.0" }
#gnuplot = "0.0.39"
indicatif = "0.17.7"
nalgebra = "0.32.3"
num-traits = { version = "0.2.15", features = ["i128"] }
#num-traits = { version = "=0.2.18", features = ["i128"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft = "6.2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
yaml-rust = "0.4.5"
plotters = "0.3.5"
rayon = "1.8.1"