[package]
name = "nm4p-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
differential = { git = "https://github.com/LucaCiucci/differential-rs", version = "0.1.0" }
#gnuplot = "0.0.39"
indicatif = "0.17.7"
nalgebra = "0.32.3"
num-traits = { version = "0.2.15", features = ["i128"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft = "6.1.0"
yaml-rust = "0.4.5"
