[package]
name = "nm4p-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
differential = { workspace = true }
indicatif = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
yaml-rust = { workspace = true }
#wgsl-inline = { git = "https://github.com/LucentFlux/wgsl-inline/" }
#spirv-builder = "0.9.0"